--- a/src/components/action-buttons.module.css
+++ b/src/components/action-buttons.module.css
@@ -15,12 +15,18 @@
   font-size: 1.2rem;
   box-shadow: 5px 5px 10px rgb(179, 179, 179);
   cursor: pointer;
+  transition: background-color 0.3s ease-in-out; /* Adding a transition effect */
 }
 
 .contact {
-  background-color: rgb(0, 0, 88);
+  background-color: rgb(10, 87, 118);
 }
 
 .gallery {
-  background-color: blue;
+  background-color: rgb(122, 181, 204);
+}
+
+/* Add the hover effect */
+.button:hover {
+  background-color: rgb(3, 31, 43); 
 }
