--- a/src/components/types/types-of-fishing.module.css
+++ b/src/components/types/types-of-fishing.module.css
@@ -29,4 +29,13 @@
   .types {
     padding: 2%;
   }
+
+  .image-section {
+    flex-wrap: wrap;
+  }
+  
+  .image {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
 }
