--- a/src/components/types/fishing-type.module.css
+++ b/src/components/types/fishing-type.module.css
@@ -16,20 +16,15 @@
   left: 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   color: white;
-  font-weight: bold;
-  font-size: 2rem;
   text-align: center;
+  padding: 10px;
 }
 
 .description {
-  height: 100%;
   width: 100%;
-  display: flex;
-  padding: 10px;
-  align-items: center;
   font-size: 1.5vw;
   border-radius: 3.1rem;
 }
@@ -59,11 +54,11 @@
     margin: 1rem;
   }
   .fishing-type__img {
-    width: 80%;
+    width: 100%;
     height: auto;
   }
   .overlay {
-    width: 80%;
+    width: 100%;
     height: 100%;
   }
   .footer {
@@ -78,6 +73,6 @@
     font-size: 1rem;
   }
   .description {
-    font-size: 1vw;
+    font-size: 1.5rem;
   }
 }
