--- a/src/App.module.css
+++ b/src/App.module.css
@@ -17,6 +17,7 @@
   position: absolute;
   top: 1rem;
   left: 1rem;
+  width: 150px;
 }
 
 @media only screen and (max-width: 1160px) {
@@ -25,5 +26,7 @@
     width: 4.5rem;
     left: 0.5rem;
     top: 1rem;
+    width: 50px;
+    height: auto;
   }
 }
