--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,3 +1,7 @@
+h1{
+   font-size: 35px;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -21,7 +25,7 @@ nav {
 
 .link {
   text-decoration: none;
-  font-size: 1.3rem;
+  font-size: 15px;
   font-weight: 600;
   color: black;
   transition: 0.3s ease-in-out;
@@ -34,6 +38,10 @@ nav {
 
 .mobile {
   display: none;
+}
+
+.full{
+  display: flex;
 }
 
 .mobile i {
@@ -68,6 +76,9 @@ nav {
   }
   .link {
     margin-bottom: 1.5rem;
+  }
+  .full{
+    display: none;
   }
 }
 
