--- a/src/components/footer/title.module.css
+++ b/src/components/footer/title.module.css
@@ -1,6 +1,7 @@
 .title {
   font-size: 3rem;
   cursor: pointer;
+  margin: 1rem;
 }
 
 .title:hover {
@@ -9,9 +10,8 @@
 
 @media only screen and (max-width: 1160px) {
   .title {
-    font-size: 10px; /* Adjusted font size for mobile screens */
+    font-size: 10px;
     font-weight: bold;
+    margin: 10px;
   }
-  
- 
 }
